third_party/move/move-compiler-v2/tests/checking/naming/other_builtins_invalid.move
module 0x8675309::M {
    fun foo(x: &mut u64) {
        freeze<u64, bool>(x);
        freeze<>(x);
        assert!();
        assert!(false);
        assert!(0 != 1);
    }
}
